tests/errors/incomplete_from_char.stderr
error[E0277]: the trait bound `char: From<E>` is not satisfied
 --> tests/errors/incomplete_from_char.rs:15:13
  |
  15 |     let _ = char::from(E::Dot);
     |             ^^^^ the trait `From<E>` is not implemented for `char`
     |
help: `char` implements trait `From<T>`
    --> $RUST/core/src/ascii/ascii_char.rs
     |
     |             impl const From<AsciiChar> for $ty {
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `From<std::ascii::Char>`
...
     | into_int_impl!(u8 u16 u32 u64 u128 char);
     | ---------------------------------------- in this macro invocation
     |
    ::: $RUST/core/src/char/convert.rs
     |
 217 | impl const From<u8> for char {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `From<u8>`
     = note: this error originates in the macro `into_int_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
